syntax = "proto3";
package api.pb;

message NewStoreRequest {}

message NewStoreReply {
    string ID = 1;
}

message RegisterSchemaRequest {
    string storeID = 1;
    string name = 2;
    string schema = 3;
}

message RegisterSchemaReply {}

message ModelCreateRequest {
    string storeID = 1;
    string modelName = 2;
    repeated string values = 3;
}

message ModelCreateReply {
    repeated string entities = 1;
}

message ListenRequest {
    string storeID = 1;
    string modelName = 2;
    string entityID = 3;
}

message ListenReply {
    string entity = 1;
}

service API {
    rpc NewStore(NewStoreRequest) returns (NewStoreReply) {}
    rpc RegisterSchema(RegisterSchemaRequest) returns (RegisterSchemaReply) {}
    rpc ModelCreate(ModelCreateRequest) returns (ModelCreateReply) {}
    rpc Listen(ListenRequest) returns (stream ListenReply) {}
}
